# g2esoft

./: README.md  g4sim_002.sh  myproc.xml  testTrackReco_TrkFinding.xml
g2esoft-master/: .gitignore  CMakeLists.txt  config.cmake.example  g2esoft.cxx
g2esoft-master/TreeProc/: CMakeLists.txt
g2esoft-master/TreeProc/include/: Factory.h  Processor.h  XMLParser.h
g2esoft-master/TreeProc/src/: EventArranger.cxx  LogStreamBuf.cxx  ProcManager.cxx  Processor.cxx  RunManager.cxx  TreeManager.cxx  XMLParser.cxx
g2esoft-master/app/: CMakeLists.txt
g2esoft-master/app/processors/: CMakeLists.txt
g2esoft-master/app/processors/G4Sim/: CMakeLists.txt
g2esoft-master/app/processors/G4Sim/include/: G4Sim.h  G4SimDetectorConstruction.h  G4SimEmStandardPhysics.h  G4SimEventAction.h  G4SimMagneticField.h  G4SimPhysicsList.h  G4SimPrimaryGeneratorAction.h  G4SimRunManager.h  G4SimStepMax.h  G4SimSteppingAction.h  G4SimSynchrotronRadiation.h
g2esoft-master/app/processors/G4Sim/src/: G4Sim.cxx  G4SimDetectorConstruction.cxx  G4SimEmStandardPhysics.cxx  G4SimEventAction.cxx  G4SimMagneticField.cxx  G4SimPhysicsList.cxx  G4SimPrimaryGeneratorAction.cxx  G4SimRunManager.cxx  G4SimStepMax.cxx  G4SimSteppingAction.cxx  G4SimSynchrotronRadiation.cxx
g2esoft-master/app/processors/HitMerge/include/: HitMerge.h
g2esoft-master/app/processors/HitMerge/src/: HitMerge.cxx
g2esoft-master/app/processors/HitReco/include/: HitReco.h
g2esoft-master/app/processors/HitReco/src/: HitReco.cxx
g2esoft-master/app/processors/PileupArranger/include/: PileupArranger.h
g2esoft-master/app/processors/PileupArranger/src/: PileupArranger.cxx
g2esoft-master/app/processors/StripDigi/: CMakeLists.txt
g2esoft-master/app/processors/StripDigi/data/: CRRCnParameter.root  DiffExtendParameter.root
g2esoft-master/app/processors/StripDigi/include/: StripDigi.h  Waveform.h
g2esoft-master/app/processors/StripDigi/src/: StripDigi.cxx
g2esoft-master/app/processors/TestProc/include/: TestProc.h
g2esoft-master/app/processors/TestProc/src/: TestProc.cxx
g2esoft-master/app/processors/TrackBack/include/: TrackBack.h
g2esoft-master/app/processors/TrackBack/src/: TrackBack.cxx
g2esoft-master/app/processors/TrkFinding/: CMakeLists.txt
g2esoft-master/app/processors/TrkFinding/include/: TrkFinding.h
g2esoft-master/app/processors/TrkFinding/src/: TrkFinding.cxx
g2esoft-master/app/processors/TrkFitting/: CMakeLists.txt
g2esoft-master/app/processors/TrkFitting/cmake/: FindGenfit.cmake
g2esoft-master/app/processors/TrkFitting/data/: Detector.gdml
g2esoft-master/app/processors/TrkFitting/include/: MyBField.h  MyFinitePlane.h  TrkFitting.h
g2esoft-master/app/processors/TrkFitting/src/: MyBField.cxx  TrkFitting.cxx
g2esoft-master/app/src/: objects.cxx
g2esoft-master/config/: demo.xml  testG4Sim.xml  testTrackReco.xml  testTrackRecoPileup.xml
g2esoft-master/include/TreeProc/: EventArranger.h  LogStream.h  Parameter.h  ProcManager.h  RunManager.h  TreeManager.h
g2esoft-master/include/app/: objects.h
