# CMakeLists.txt for TreeProc
# @author Taikan Suehara (Kyushu University)
cmake_minimum_required(VERSION 2.8)

find_program( G4Found geant4-config )
if( G4Found )
    add_subdirectory( G4Sim )
else()
    message( "Geant4 is not found. Skip G4Sim" )
endif()
add_subdirectory( PileupArranger )
add_subdirectory( StripDigi )
add_subdirectory( TestProc )
add_subdirectory( HitReco )
add_subdirectory( HitMerge )
add_subdirectory( TrkFinding )
if( DEFINED ENV{GENFIT_DIR} AND DEFINED ENV{Eigen3_DIR} )
    add_subdirectory( TrkFitting )
else()
    message( "Genfit or Eigen3 is not found. Skip TrkFitting" )
endif()
add_subdirectory( TrackBack )
